se corrige titulo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AGV Landing</title>
     <!-- icons -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- gsap -->
@@ -26,7 +26,7 @@
                 <span>A G V </span>
             </div>
             <ul>
-                <li><a href="">Collection</a></li>
+                <li><a href="https://www.agv.com/us/en/modular/sportmodular/">Collection</a></li>
                 <li><a href="">Offers</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
@@ -41,7 +41,7 @@
 
         <div class="title">
             <p>Best Protection</p>
-            <span> A V G </span>
+            <span> A G V </span>
         </div>
 
         <div class="btn">
